--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="header-content">
             <div class="logo">
                 <a href="#" class="logo_link">
-                    &lt/html&gt
+                    "&lt"/html"&gt"
                 </a>
             </div>
             <h1 class="header_title">закрывающий тег</h1>
@@ -53,8 +53,8 @@
     <main>
         <div class="card">
             <h2 class="card_title">Фритрек и нулевой спринт: Подготовка к работе</h2>
-            <div  class="multi" class="card_img-box">
-                <p class="label">&lt/html&gt</p>
+            <div  class="multi  card_img-box">
+                <p class="label">"&lt"/html"&gt"</p>
                 <img  class="card_img" src="./images/image.png" alt="машинка">
             </div>
             <div class="card_text-box">
@@ -81,13 +81,13 @@
                             d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                             fill="none" />
                     </svg>
-                    <button class="card__like-button"><span class="button__text">Like</span></button>
+                    <button class="card__like-button"><span class="button__text">Like</span></button></button>
             </div>
         </div>
         <div class="card">
             <h2 class="card_title">1 спринт: Я — чистый лист</h2>
-            <div class="brightness" class="card_img-box">
-                <p class="label">&lt/html&gt</p>
+            <div  class="brightness  card_img-box">
+                <p class="label">"&lt"/html"&gt"</p>
                 <img class="card_img" src="./images/image.png" alt="машинка">
             </div>
             <div class="card_text-box">
@@ -116,13 +116,13 @@
                             d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                             fill="none" />
                     </svg>
-                    <button class="card__like-button"><span class="button__text">Like</span></button>
+                    <button class="card__like-button"><span class="button__text">Like</span></button></button>
             </div>
         </div>
         <div class="card">
             <h2 class="card_title">1 спринт: А если не получится?</h2>
-            <div class="contrast" class="card_img-box">
-                <p class="label">&lt/html&gt</p>
+            <div  class="contrast  card_img-box">
+                <p class="label">"&lt"/html"&gt"</p>
                 <img class="card_img" src="./images/image.png" alt="машинка">
             </div>
             <div class="card_text-box">
@@ -150,13 +150,13 @@
                             d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                             fill="none" />
                     </svg>
-                    <button class="card__like-button"><span class="button__text">Like</span></button>
+                    <button class="card__like-button"><span class="button__text">Like</span></button></button>
             </div>
         </div>
         <div class="card">
             <h2 class="card_title">2 спринт: Погоня за идеалом</h2>
-            <div class="blur" class="card_img-box">
-                <p class="label">&lt/html&gt</p>
+            <div  class="blur card_img-box">
+                <p class="label">"&lt"/html"&gt"</p>
                 <img class="card_img" src="./images/image.png" alt="машинка">
             </div>
             <div class="card_text-box">
@@ -185,13 +185,13 @@
                             d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                             fill="none" />
                     </svg>
-                    <button class="card__like-button"><span class="button__text">Like</span></button>
+                    <button class="card__like-button"><span class="button__text">Like</span></button></button>
             </div>
         </div>
         <div class="card">
             <h2 class="card_title">3 спринт: Обходные стратегии</h2>
-            <div class="saturate" class="card_img-box">
-                <p class="label">&lt/html&gt</p>
+            <div  class="saturate  card_img-box">
+                <p class="label">"&lt"/html"&gt"</p>
                 <img class="card_img" src="./images/image.png" alt="машинка">
             </div>
             <div class="card_text-box">
@@ -219,13 +219,13 @@
                             d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                             fill="none" />
                     </svg>
-                    <button class="card__like-button"><span class="button__text">Like</span></button>
+                    <button class="card__like-button"><span class="button__text">Like</span></button></button>
             </div>
         </div>
         <div class="card">
             <h2 class="card_title">3 спринт: Когда опускаются руки</h2>
-            <div class="hue-rotate" class="card_img-box">
-                <p class="label">&lt/html&gt</p>
+            <div c class="hue-rotate  card_img-box">
+                <p class="label">"&lt"/html"&gt"</p>
                 <img class="card_img" src="./images/image.png" alt="машинка">
             </div>
             <div class="card_text-box">
@@ -254,13 +254,13 @@
                             d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                             fill="none" />
                     </svg>
-                    <button class="card__like-button"><span class="button__text">Like</span></button>
+                    <button class="card__like-button"><span class="button__text">Like</span></button></button>
             </div>
         </div>
         <div class="card">
             <h2 class="card_title">«Сейчас я здесь»</h2>
-            <div class="sepia" class="card_img-box">
-                <p class="label">&lt/html&gt</p>
+            <div  class="sepia card_img-box">
+                <p class="label">"&lt"/html"&gt"</p>
                 <img class="card_img" src="./images/image.png" alt="машинка">
             </div>
             <div class="card_text-box">
@@ -290,7 +290,7 @@
                             d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                             fill="none" />
                     </svg>
-                    <button class="card__like-button"><span class="button__text">Like</span></button>
+                    <button class="card__like-button"><span class="button__text">Like</span></button></button>
             </div>
         </div>
         <footer class="floppy_button-box">
