--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="header">
         <section class="header-content">
             <div class="logo">
-                <a href="#" class="logo_link"> "&lt;"/html"&gt;" </a>
+                <a href="#" class="logo_link"> &lt;/html&gt;</a>
             </div>
             <h1 class="header_title">закрывающий тег</h1>
             <nav class="theme-menu header__theme-menu">
@@ -53,7 +53,7 @@
                 Фритрек и нулевой спринт: Подготовка к работе
             </h2>
             <div class="card_img-box">
-                <p class="label">"&lt;"/html"&gt;"</p>
+                <p class="label">&lt;/html&gt;</p>
                 <img class="multi card_img" src="./images/image.png" alt="машинка" />
             </div>
             <div class="card_text-box">
@@ -95,7 +95,7 @@
         <div class="card">
             <h2 class="card_title">1 спринт: Я — чистый лист</h2>
             <div class="card_img-box">
-                <p class="label">"&lt;"/html"&gt;"</p>
+                <p class="label">&lt;/html&gt;</p>
                 <img class="brightness card_img" src="./images/image.png" alt="машинка" />
             </div>
             <div class="card_text-box">
@@ -139,7 +139,7 @@
         <div class="card">
             <h2 class="card_title">1 спринт: А если не получится?</h2>
             <div class="card_img-box">
-                <p class="label">"&lt;"/html"&gt;"</p>
+                <p class="label">&lt;/html&gt;</p>
                 <img class="contrast card_img" src="./images/image.png" alt="машинка" />
             </div>
             <div class="card_text-box">
@@ -181,7 +181,7 @@
         <div class="card">
             <h2 class="card_title">2 спринт: Погоня за идеалом</h2>
             <div class="card_img-box">
-                <p class="label">"&lt;"/html"&gt;"</p>
+                <p class="label">&lt;/html&gt;</p>
                 <img class="blur card_img" src="./images/image.png" alt="машинка" />
             </div>
             <div class="card_text-box">
@@ -225,7 +225,7 @@
         <div class="card">
             <h2 class="card_title">3 спринт: Обходные стратегии</h2>
             <div class="saturate card_img-box">
-                <p class="label">"&lt;"/html"&gt;"</p>
+                <p class="label">&lt;/html&gt;</p>
                 <img class="saturate card_img" src="./images/image.png" alt="машинка" />
             </div>
             <div class="card_text-box">
@@ -267,7 +267,7 @@
         <div class="card">
             <h2 class="card_title">3 спринт: Когда опускаются руки</h2>
             <div class="hue-rotate card_img-box">
-                <p class="label">"&lt;"/html"&gt;"</p>
+                <p class="label">&lt;/html&gt;</p>
                 <img class="hue-rotate card_img" src="./images/image.png" alt="машинка" />
             </div>
             <div class="card_text-box">
@@ -310,7 +310,7 @@
         <div class="card">
             <h2 class="card_title">«Сейчас я здесь»</h2>
             <div class="card_img-box">
-                <p class="label">"&lt;"/html"&gt;"</p>
+                <p class="label">&lt;/html&gt;</p>
                 <img class="sepia card_img" src="./images/image.png" alt="машинка" />
             </div>
             <div class="card_text-box">
