--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                 <svg viewBox="0 0 21 21" class="floppy">
                     <use href="./svg/floppy.svg#floppy"></use>
                 </svg>
-                <span class="button__text">Cохранить на память</span>
+                <span class="button__text">Сохранить на память</span>
             </button>
             <dialog id="dialog">
                 <svg viewBox="0 0 21 21" class="floppy-modal">
